<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_turkey">Constantinople is the largest city in Turkey</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="cheat_button">Cheat!</string>
    <string name="response_correct">Correct!</string>
    <string name="response_incorrect">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="warning_text">Are you sure you want to cheat?</string>
    <string name="answer_placeholder">Answer will appear here.</string>
    <string name="show_score_button">Show Score Now</string>
    <string name="restart_button">Restart Quiz</string>
    <string name="quiz_done">Quiz is complete.</string>
    <string name="times_cheated">Times Cheated:</string>
    <string name="num_correct"># Correct:</string>
    <string name="num_incorrect"># Incorrect:</string>
    <string name="num_unanswered"># Unanswered:</string>
    <string name="score_screen_text">Your Score</string>
</resources>
