<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:text="Something went wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtQuestion"
        android:layout_weight="0.04"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTrue" />

        <Button
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFalse" />
    </LinearLayout>

    <Button
        android:text="@string/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheat" />

    <Button
        android:text="@string/next_button"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/show_score_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowScore"
            android:layout_weight="1" />

        <Button
            android:text="@string/restart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRestart"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>