<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:text="@string/warning_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtWarning"
        android:gravity="center"
        android:layout_weight="0.05" />

    <TextView
        android:text="@string/answer_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAnswer"
        android:gravity="center"
        android:layout_weight="0.08" />

    <Button
        android:text="@string/show_answer_button"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowAnswer" />
</LinearLayout>