<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:text="@string/score_screen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtScore"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="193dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/num_correct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCorrect"
                tools:textSize="14sp" />

            <TextView
                android:text="@string/num_incorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtIncorrect"
                tools:textSize="14sp" />

            <TextView
                android:text="@string/num_unanswered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUnanswered"
                tools:textSize="14sp" />

            <TextView
                android:text="@string/times_cheated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCheated"
                tools:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNumCorrect"
                tools:textSize="14sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNumIncorrect"
                tools:textSize="14sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNumUnanswered"
                tools:textSize="14sp" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTimesCheated"
                tools:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>